ztd-method/ui/struct_skip_mutator.stderr
error[E0599]: no method named `first_mut` found for struct `StructSkipMutator` in the current scope
  --> ui/struct_skip_mutator.rs:21:14
   |
7  | struct StructSkipMutator {
   | ------------------------ method `first_mut` not found for this struct
...
21 |     instance.first_mut();
   |              ^^^^^^^^^ method not found in `StructSkipMutator`
